src/App.css
#container {
    height: 600px;
    /* 568px picture + 16px padding on top and bottom */
    width: 90vw;
    max-width: 1050px;
    border-radius: 12px;

    @media (max-width: 639px) {
        height: 100dvh;
        width: 100vw;
        border-radius: 0;
    }
}

/* sidebar and topbar CSS */
#stepsSection {
    height: 568px;
    width: 274px;
    border-radius: 12px;
    background-image: url("/public/images/bg-sidebar-desktop.svg");

    @media (max-width: 767px) {
        width: 194px;
    }
}

.step {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 16px;

    @media (max-width: 768px) {
        gap: 8px;
    }
}

.stepNumber {
    height: 38px;
    width: 38px;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 2px solid var(--blue-200);
    border-radius: 50%;
    color: var(--white);
    font-family: ubuntuMedium;

    @media (max-width: 768px) {
        height: 32px;
        width: 32px;
        font-size: 14px;
    }
}

.activeCircle {
    background-color: var(--blue-200);
    color: var(--blue-950);
}

.step p {
    line-height: 16px;
    color: var(--purple-200);
}

#stepsSectionMobile {
    height: 174px;
    width: 100%;
    background-image: url("/public/images/bg-sidebar-mobile.svg");
    background-repeat: no-repeat;
    background-size: cover;
}

/* account setup section CSS */
#setupSection {
    width: 100%;
    height: calc(100% - 174px);

    @media (min-width: 640px) {
        width: calc(100% - 194px);
        height: 100%;
    }

    @media (min-width: 768px) {
        width: calc(100% - 274px);
    }
}

.liftedElement {
    display: flex;
    flex-direction: column;
    border-radius: 6px;

    @media (max-width: 639px) {
        position: absolute;
        width: 90%;
        left: 5%;
        top: -74px;
    }
}

.stepHeadingDiv {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.stepHeading {
    color: var(--blue-950);
    font-family: ubuntuBold;
}

.stepText {
    color: var(--grey-500);
}

.buttonsDiv {
    width: 100%;
    display: flex;

    @media (max-width: 639px) {
        position: absolute;
        bottom: 0;
        padding-right: 5%;
    }
}

/* form section CSS */
.personalInfoInput {
    border: 2px solid var(--purple-200);
    color: var(--blue-950);
    font-family: ubuntuBold;
    border-radius: 6px;

    @media (max-width: 639px) {
        border-width: 1px;
    }
}

.personalInfoInput:focus {
    outline: transparent;
    border-color: var(--purple-600);
}

.showRedBorder {
    border-color: var(--red-500);
}

.showRedBorder:focus {
    border-color: var(--red-500);
}

.personalInfoInput::placeholder {
    font-family: ubuntuMedium;
}

form label {
    color: var(--blue-950);
    font-size: 14px;
    font-family: ubuntuMedium;

    @media (min-width: 748px) {
        font-size: 16px;
    }
}

.warning {
    color: var(--red-500);
    visibility: hidden;
}

.showWarning {
    visibility: visible;
}

/* Select Plan CSS */
.planIcon {
    height: 40px;
    width: 40px;

    @media (max-width: 639px) {
        height: 30px;
        width: 30px;
    }
}

.planCard {
    display: flex;
    border: 1px solid var(--purple-200);
    border-radius: 6px;
    padding: 12px;
    gap: 10px;
    transition: all 0.2s ease-out;
    cursor: pointer;

    @media (min-width: 640px) {
        width: 33%;
        height: 180px;
        padding: 20px 14px;
        flex-direction: column;
        justify-content: space-between;
        border-width: 2px;
    }
}

.planCard:hover,
.selectedPlanCard {
    border-color: var(--purple-600);
}

.selectedPlanCard {
    background-color: var(--blue-100);
}

.modeName {
    font-size: 12px;
    line-height: 12px;
    font-family: ubuntuBold;

    @media (min-width: 640px) {
        font-size: 16px;
        line-height: 16px;
    }
}

.price {
    font-size: 12px;
    line-height: 12px;
    font-family: ubuntuMedium;

    @media (min-width: 640px) {
        font-size: 16px;
        line-height: 16px;
    }
}

.freeMonths {
    font-size: 10px;
    line-height: 10px;

    @media (min-width: 640px) {
        font-size: 14px;
        line-height: 14px;
    }
}

.subscriptionMode {
    color: var(--grey-500);
    font-family: ubuntuMedium;
    font-size: 12px;

    @media (min-width: 640px) {
        font-size: 16px;
    }
}

.chosenMode {
    color: var(--blue-950);
}

/* Add-Ons CSS */
.addOnCard {
    width: 100%;
    padding: 14px 20px;
    border-radius: 6px;
    border: 2px solid var(--grey-500);
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    cursor: pointer;

    @media (max-width: 639px) {
        border-width: 1px;
        padding: 12px;
        gap: 12px;
    }
}

.selectedAddOnCard {
    border-color: var(--purple-600);
}

@media (hover: hover) {
    .addOnCard:hover {
        border-color: var(--purple-600);
    }
}

.selectedAddOnCard {
    background-color: var(--blue-100);
}

.addOnCardText {
    font-size: 12px;
    line-height: 12px;

    @media (min-width: 640px) {
        font-size: 16px;
        line-height: 16px;
    }
}

.addOnCheckBox {
    accent-color: var(--purple-600);
    height: 20px;
    width: 20px;
    border: 2px solid var(--grey-500);
    border-radius: 3px;
    cursor: pointer;

    @media (max-width: 639px) {
        height: 18px;
        width: 18px;
    }
}

.selectedAddOnCard .addOnCheckBox {
    background: var(--purple-600) url(/public/images/icon-checkmark.svg);
    background-repeat: no-repeat;
    background-position: calc(50%) calc(55%);
    border: none;
}

/* Selected plans and add-ons CSS */
#plansAndAddOns {
    display: flex;
    flex-direction: column;
    background-color: var(--blue-100);
    padding: 20px;
    border-radius: 6px;
}

.planName,
.changePlan,
.planCost,
.addOnName,
.addOnCost,
.totalText {
    font-size: 14px;
    line-height: 14px;

    @media (min-width: 640px) {
        font-size: 16px;
        line-height: 18px;
    }
}

.planName,
.planCost {
    color: var(--blue-950);
    font-family: ubuntuBold;
}

.changePlan {
    color: var(--grey-500);
    text-decoration: underline;
    cursor: pointer;
}

@media (hover: hover) {
    .changePlan:hover {
        color: var(--purple-600);
    }
}

.divider {
    @media (max-width: 639px) {
        margin-top: 6px;
        margin-bottom: 12px;
    }
}

.addOnName,
.totalText {
    color: var(--grey-500);
}

.addOnCost {
    color: var(--blue-950);
    font-family: ubuntuMedium;
}

.totalCost {
    color: var(--purple-600);
    font-size: 22px;
    font-family: ubuntuBold;

    @media (max-width: 639px) {
        font-size: 17px;
    }
}

/* Thank You section CSS */
.thankYouBox {
    height: calc(100% - 104px);
}

.thankYouImg {
    margin-bottom: 16px;

    @media (max-width: 639px) {
        height: 50px;
        width: 50px;
        margin-bottom: 12px;
    }
}

